[package]
name = "dd_maths_traits_macros"
version = "0.1.0"
edition = "2021"
description = "Macros for `dd_maths_traits` crate"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.15"
proc-macro2 = "1.0.15"

[lib]
proc-macro = true